[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-workflow"
version = "0.0.3"
description = "A tool agnostic resume workflow cli"
authors = [ { name = "Orest Tokovenko", email = "hi@oresttokovenko.com" } ]
requires-python = ">=3.11,<3.12"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click>=8.1.7,<8.2",
]

optional-dependencies.dev = [
    "ruff>=0.4.7,<0.5",
]

[project.scripts]
resume-workflow = "resume_workflow:__main__.cli"

[tool.ruff]
target-version = "py311"

lint.select = [
    # flake8-bugbear
    "B",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # isort
    "I",
    # flake8-simplify
    "SIM",
    # pyupgrade
    "UP",
]
lint.extend-select = [
    "I",
]

[tool.pyproject-fmt]
column_width = 120
indent = 4
