[build-system]
requires = ["uv_build>=0.9.13,<0.10"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "resume_workflow"
module-root = ""

[project]
name = "resume-workflow"
version = "0.1.1"
description = "A tool agnostic resume workflow cli"
authors = [ { name = "Orest Tokovenko", email = "hi@oresttokovenko.com" } ]
requires-python = ">=3.11,<3.12"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click<8.2,>=8.1.7",
]

[dependency-groups]
dev = [
    "pyrefly>=0.43.1",
    "ruff>=0.14.6,<0.15",
]

[project.scripts]
resume-workflow = "resume_workflow:main.cli"

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = [
    # flake8-bugbear
    "B",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # isort
    "I",
    # flake8-simplify
    "SIM",
    # pyupgrade
    "UP",
]
fixable = ["ALL"]
extend-select = [
    "I",
]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.pyproject-fmt]
column_width = 120
indent = 4

[tool.pyrefly]
search_path = ["resume_workflow"]
exclude_paths = ["tests"]
python_version = "3.11"


